tests/valid/61015_empty_array/empty_array.agu
-- Author: 61015, Filipe Lopes

let arr : Int[] = new Int [0 | 0];
print(length(arr));